# core-gpt

./: .gitignore  DEVELOPMENT.md  README.md  pyproject.toml
experiments/28m_model/: model.yaml
experiments/3m_baseline/: model.yaml
experiments/6m_baseline/: model.yaml
src/data_loaders/: text.py
src/entrypoints/: train_gpt.py
src/models/: gpt_config.py  gpt_model.py  module.py
src/models/embeddings/: rope.py
src/ops/: fp8.py
src/optimizers/: muon.py  utils.py
src/scripts/: paramater_count_calc.py  parameter_count_calc.py  torch_compile_test.py
src/utils/: evaluate_hellaswag.py  inference.py  kernel_warmup.py  log_utils.py  logging.py
tests/models/: test_gpt_config.py
tests/models/embeddings/: test_rope.py
tests/optimizers/: test_utils.py
tests/utils/: test_log_utils.py  test_logging.py
